# fastapi-perfectionist-starter

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .env.example  alembic.ini  pyproject.toml
{{ cookiecutter.project_slug }}/alembic/: env.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: main.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/api/middleware/: error.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/api/router/: __init__.py  auth.py  note.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/api/schema/: note.py  user.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/api/v1/: __init__.py  auth.py  note.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/api/v1/schema/: note.py  user.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/infra/: __init__.py  engine.py  logging.py  models.py  pagination.py  response.py  settings.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/infra/middleware/: __init__.py  cors.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/modules/note/: __init__.py  dependencies.py  services.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/modules/user/: __init__.py  dependencies.py  services.py
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_auth.py  test_note.py
