[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
requires-python = ">=3.14"
authors = [
    {name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}"}
]
dependencies = [
    "alembic>=1.17.0",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.123.0",
    "greenlet>=3.2.0",
    "loguru>=0.7.3",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.0",
    "freezegun>=1.5.1",
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.project_slug }}"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.alembic]
script_location = "%(here)s/alembic"
prepend_sys_path = ["."]
